git-svn-id: http://svn.codehaus.org/geoserver/branches/wcs-branch@4305 ef1d6e69-97e5-0310-af46-8a06194da32a
Former-commit-id: 43aaea7f9d9b855a51abd46572f4566d47def9bc [formerly cea7a0b48a4b777545b554303b9136905e581149]
Former-commit-id: 4a455c062aa039ff98967b71c764934f1a4a3c49